@@ -189,7 +189,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 3, executionPlan.getSteps().size());
         assertEquals("operation name is different than expected", operationName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -218,7 +218,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 4, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -260,7 +260,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -304,7 +304,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
